<resources>
    <string name="app_name">Care Clinic</string>
    <string name="login_title">Login Now</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_buttonlogin">Log in</string>
    <string name="login_button_forgot">Forgot password?</string>
    <string name="login_orText"> --- OR --- </string>
    <string name="login_button_register">Register</string>
    <string name="login_dialog_forgot_title">Type your email address</string>
    <string name="login_dialog_forgot_ok">OK</string>
    <string name="login_dialog_forgot_close">Close</string>
    <string name="login_snackbar_password_short">Password cannot be empty</string>
    <string name="login_snackbar_email_error">Email is not valid</string>
    <string name="login_snackbar_email_short">Email cannot be empty</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <!-- activity registration -->
    <string name="registration_title">Registration</string>
    <string name="registration_hint_email">Email</string>
    <string name="registration_hint_confirm">Confirm Password</string>
    <string name="registration_button_register">Register</string>
    <string name="registration_text_login">Already have an account?</string>
    <string name="registration_button_login">Login Now</string>
    <string name="registration_dialog_title">Welcome</string>
    <string name="registration_dialog_text">Verify your email by clicking the link we sent you to your inbox</string>
    <string name="registration_dialog_positive">Close</string>
    <string name="registration_snackbar_password_short">Password must be longer than 8 character</string>
    <string name="registration_snackbar_password_error">Password doesn\'t match</string>
    <string name="registration_snackbar_email_short">Email cannot be empty</string>
    <string name="registration_snackbar_email_error">Email is not valid</string>
    <string name="app_slug" />
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sign Out</string>
    <string name="title_activity_tabed">Tabed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_text_1">Doctors</string>
    <string name="tab_text_2">Chats</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="email">E-mail</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="con_password">Confirm Password</string>
    <string name="symptoms_checker">Symptoms Checker</string>
    <string name="START">START</string>
    <string name="article_name">article name</string>
    <string-array name="choice_items">
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>


    </string-array>

    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="title_treatment_deadline">Treatment deadline</string>
    <string name="title_continuous_use">Continuous use</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Successfully</string>
    <string name="successfully_deleted_message">Medicine deleted Successfully</string>
    <string name="reminder_message">It\'s Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>










    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Text to display in the list when there are no news items [CHAR LIMIT=NONE] -->
    <string name="no_news">No news found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Image description for news item photo -->
    <string name="image_content">Image for news item</string>

    <!-- Placeholder for title -->
    <string name="title_placeholder">Place holder for title</string>

    <!-- Section for news item -->
    <string name="section_placeholder">Placeholder for section</string>

    <!-- Placeholder for image -->
    <string name="image_description">Placeholder for image</string>

    <!-- Placeholder for contributor and date -->
    <string name="contributor_date">Placeholder for contributor and date</string>
</resources>
