<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login2"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#3F51B5"
        android:textSize="58sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_motion"
        android:layout_width="349dp"
        android:layout_height="342dp"
        android:layout_below="@+id/title"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="196dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="311dp"
            android:layout_height="291dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            android:paddingTop="0dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/password"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/sign_in"
                android:singleLine="true" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/con_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/sign_in"
                android:singleLine="true" />

            <Button
                android:id="@+id/signUP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:background="@color/blue"
                android:nextFocusDown="@+id/signIN"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>