<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@drawable/wal2"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#3F51B5"
        android:textSize="58sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_motion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"

                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/password"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/sign_in"
                android:singleLine="true"
                android:textColor="#005E5A5A" />

            <Button
                android:id="@+id/signIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:background="@color/blue"
                android:nextFocusDown="@+id/signIN"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>