<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:background="@drawable/bg1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="48dp"
            android:paddingRight="48dp"
            android:background="#a4000000"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="50dp"

                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/registration_title"
                android:textColor="@color/colorText"
                android:textSize="24sp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/registerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorText"
                    android:theme="@style/Custom.EditText" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/registerEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:textColor="@color/colorText"
                    android:theme="@style/Custom.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"
                    android:theme="@style/Custom.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/registerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorText"
                    android:theme="@style/Custom.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_save"
                android:text="@string/registration_button_register"
                android:textColor="@color/colorText" />

            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:background="@drawable/text_border">

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/registration_text_login"
                    android:textColor="@color/colorText" />

                <Button
                    android:id="@+id/gotoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:text="@string/registration_button_login"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</merge>