<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="48dp"
            android:background="#a4000000"
            android:paddingRight="48dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="50dp"

                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="@color/colorText"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginEma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:textColor="@color/colorText"
                    android:theme="@style/Custom.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/login_hint_password"

                    android:inputType="textPassword"
                    android:textColor="@color/colorText"
                    android:theme="@style/Custom.EditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_signin"
                android:text="Login"
                android:textColor="@color/colorText" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/forgotButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:text="@string/login_button_forgot"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />


            </RelativeLayout>


            <FrameLayout
                android:id="@+id/progressBarHolder"
                android:animateLayoutChanges="true"
                android:visibility="gone"
                android:alpha="0.4"
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    android:indeterminate="true"
                    android:layout_gravity="center" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/registerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:background="@drawable/text_border">

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/registration_text_login"
                    android:textColor="@color/colorText" />

                <Button
                    android:id="@+id/gotoRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@null"
                    android:text="SIGNUP NOW"
                    android:textColor="@color/colorText"
                    android:textSize="12sp" />

            </LinearLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</merge>